--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     if: contains(join(fromJson(toJson(github.event.commits)).*.modified, ''), 'user-service/')
     runs-on: ubuntu-latest
     steps:
+      - name: Debug - print modified files
+        run: echo "Modified files: ${{ toJson(github.event.commits.*.modified) }}"
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
