--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,21 +8,25 @@ on:
 
 jobs:
   build-user-service:
-    if: contains(join(fromJson(toJson(github.event.commits)).*.modified, ''), 'user-service/')
+    if: "contains(join(fromJson(toJson(github.event.commits)).*.modified, ''), 'user-service/')"
     runs-on: ubuntu-latest
     steps:
       - name: Debug - print modified files
-        run: echo "Modified files: ${{ toJson(github.event.commits.*.modified) }}"
+        run: |
+          echo "Event payload (debug): ${{ toJson(github.event) }}"
+          echo "Modified files: ${{ toJson(github.event.commits.*.modified) }}"
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: mvn -f user-service/pom.xml clean package
-      - run: docker build -t user-service:latest ./user-service
+      - name: Build User Service
+        run: mvn -f user-service/pom.xml clean package
+      - name: Build User Docker Image
+        run: docker build -t user-service:latest ./user-service
 
   build-order-service:
-    if: contains(join(fromJson(toJson(github.event.commits)).*.modified, ''), 'order-service/')
+    if: "contains(join(fromJson(toJson(github.event.commits)).*.modified, ''), 'order-service/')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -30,5 +34,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: mvn -f order-service/pom.xml clean package
-      - run: docker build -t order-service:latest ./order-service
+      - name: Build Order Service
+        run: mvn -f order-service/pom.xml clean package
+      - name: Build Order Docker Image
+        run: docker build -t order-service:latest ./order-service
